environments/dev/apps/app-lab-tekton-taxi-code/services/lab-tekton-taxi-code/base/config/200-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app.kubernetes.io/name: lab-tekton-taxi-code
    app.kubernetes.io/part-of: app-lab-tekton-taxi-code
  name: lab-tekton-taxi-code
  namespace: dev
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: lab-tekton-taxi-code
    app.kubernetes.io/part-of: app-lab-tekton-taxi-code
status:
  loadBalancer: {}
